# ml-inference-benchmarks

./: .dockerignore  .gitignore  LICENSE  README.md
benchmark/cpp/: CMakeLists.txt  Dockerfile  main.cpp
benchmark/python/: Dockerfile  benchmark.py
train/: Dockerfile  mock_churn_dataset.csv  requirements.txt  train_model.py
